--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'cf766f1f-7f20-496c-bb72-29c6c2d73317'
   imageRepository: 'reactredux'
-  containerRegistry: 'testeroljan28.azurecr.io'
+  containerRegistry: 'testyunusdevops.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
 
@@ -37,14 +37,15 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'Azure subscription 1(2d705fd4-66d4-4297-85b4-26b2b63205cf)'
-    appType: 'webApp'
-    WebAppName: 'asdk'
-    deployToSlotOrASE: true
-    ResourceGroupName: 'AzureDevops'
-    SlotName: 'production'
-    VirtualApplication: 'devops'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+          
+# - task: AzureRmWebAppDeployment@4
+#   inputs:
+#     ConnectionType: 'AzureRM'
+#     azureSubscription: 'Azure subscription 1(2d705fd4-66d4-4297-85b4-26b2b63205cf)'
+#     appType: 'webApp'
+#     WebAppName: 'asdk'
+#     deployToSlotOrASE: true
+#     ResourceGroupName: 'AzureDevops'
+#     SlotName: 'production'
+#     VirtualApplication: 'devops'
+#     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
