--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,44 +8,9 @@ trigger:
 resources:
 - repo: self
 
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'cf766f1f-7f20-496c-bb72-29c6c2d73317'
-  imageRepository: 'reactredux'
-  containerRegistry: 'testyunusdevops.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-  tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-          
-# - task: AzureRmWebAppDeployment@4
-#   inputs:
-#     ConnectionType: 'AzureRM'
-#     azureSubscription: 'Azure subscription 1(2d705fd4-66d4-4297-85b4-26b2b63205cf)'
-#     appType: 'webApp'
-#     WebAppName: 'asdk'
-#     deployToSlotOrASE: true
-#     ResourceGroupName: 'AzureDevops'
-#     SlotName: 'production'
-#     VirtualApplication: 'devops'
-#     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'acr'
+    repository: 'react'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
